gerador-codigo-final/parser.automaton
State 0:
prog' -> . prog [ # ]
-- On ALGORITMO shift to state 1
-- On prog shift to state 3
-- On declaracao_algoritmo shift to state 4

State 1:
declaracao_algoritmo -> ALGORITMO . LITSTRING [ VAR ]
-- On LITSTRING shift to state 2

State 2:
declaracao_algoritmo -> ALGORITMO LITSTRING . [ VAR ]
-- On VAR reduce production declaracao_algoritmo -> ALGORITMO LITSTRING 

State 3:
prog' -> prog . [ # ]
-- On # accept prog

State 4:
prog -> declaracao_algoritmo . VAR list(var_decl) list(func_decl) stm_block EOF [ # ]
-- On VAR shift to state 5

State 5:
prog -> declaracao_algoritmo VAR . list(var_decl) list(func_decl) stm_block EOF [ # ]
-- On ID shift to state 6
-- On var_decl shift to state 9
-- On separated_nonempty_list(VIRGULA,ID) shift to state 10
-- On list(var_decl) shift to state 20
-- On INICIO reduce production list(var_decl) -> 
-- On FUNCAO reduce production list(var_decl) -> 

State 6:
separated_nonempty_list(VIRGULA,ID) -> ID . [ DECLARA ]
separated_nonempty_list(VIRGULA,ID) -> ID . VIRGULA separated_nonempty_list(VIRGULA,ID) [ DECLARA ]
-- On VIRGULA shift to state 7
-- On DECLARA reduce production separated_nonempty_list(VIRGULA,ID) -> ID 

State 7:
separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA . separated_nonempty_list(VIRGULA,ID) [ DECLARA ]
-- On ID shift to state 6
-- On separated_nonempty_list(VIRGULA,ID) shift to state 8

State 8:
separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) . [ DECLARA ]
-- On DECLARA reduce production separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) 

State 9:
list(var_decl) -> var_decl . list(var_decl) [ INICIO FUNCAO ]
-- On ID shift to state 6
-- On var_decl shift to state 9
-- On separated_nonempty_list(VIRGULA,ID) shift to state 10
-- On list(var_decl) shift to state 19
-- On INICIO reduce production list(var_decl) -> 
-- On FUNCAO reduce production list(var_decl) -> 

State 10:
var_decl -> separated_nonempty_list(VIRGULA,ID) . DECLARA tp_primitivo PTV [ INICIO ID FUNCAO ]
-- On DECLARA shift to state 11

State 11:
var_decl -> separated_nonempty_list(VIRGULA,ID) DECLARA . tp_primitivo PTV [ INICIO ID FUNCAO ]
-- On VOID shift to state 12
-- On REAL shift to state 13
-- On LOGICO shift to state 14
-- On INTEIRO shift to state 15
-- On CARACTER shift to state 16
-- On tp_primitivo shift to state 17

State 12:
tp_primitivo -> VOID . [ VIRGULA VAR PTV FPAR ]
-- On VIRGULA reduce production tp_primitivo -> VOID 
-- On VAR reduce production tp_primitivo -> VOID 
-- On PTV reduce production tp_primitivo -> VOID 
-- On FPAR reduce production tp_primitivo -> VOID 

State 13:
tp_primitivo -> REAL . [ VIRGULA VAR PTV FPAR ]
-- On VIRGULA reduce production tp_primitivo -> REAL 
-- On VAR reduce production tp_primitivo -> REAL 
-- On PTV reduce production tp_primitivo -> REAL 
-- On FPAR reduce production tp_primitivo -> REAL 

State 14:
tp_primitivo -> LOGICO . [ VIRGULA VAR PTV FPAR ]
-- On VIRGULA reduce production tp_primitivo -> LOGICO 
-- On VAR reduce production tp_primitivo -> LOGICO 
-- On PTV reduce production tp_primitivo -> LOGICO 
-- On FPAR reduce production tp_primitivo -> LOGICO 

State 15:
tp_primitivo -> INTEIRO . [ VIRGULA VAR PTV FPAR ]
-- On VIRGULA reduce production tp_primitivo -> INTEIRO 
-- On VAR reduce production tp_primitivo -> INTEIRO 
-- On PTV reduce production tp_primitivo -> INTEIRO 
-- On FPAR reduce production tp_primitivo -> INTEIRO 

State 16:
tp_primitivo -> CARACTER . [ VIRGULA VAR PTV FPAR ]
-- On VIRGULA reduce production tp_primitivo -> CARACTER 
-- On VAR reduce production tp_primitivo -> CARACTER 
-- On PTV reduce production tp_primitivo -> CARACTER 
-- On FPAR reduce production tp_primitivo -> CARACTER 

State 17:
var_decl -> separated_nonempty_list(VIRGULA,ID) DECLARA tp_primitivo . PTV [ INICIO ID FUNCAO ]
-- On PTV shift to state 18

State 18:
var_decl -> separated_nonempty_list(VIRGULA,ID) DECLARA tp_primitivo PTV . [ INICIO ID FUNCAO ]
-- On INICIO reduce production var_decl -> separated_nonempty_list(VIRGULA,ID) DECLARA tp_primitivo PTV 
-- On ID reduce production var_decl -> separated_nonempty_list(VIRGULA,ID) DECLARA tp_primitivo PTV 
-- On FUNCAO reduce production var_decl -> separated_nonempty_list(VIRGULA,ID) DECLARA tp_primitivo PTV 

State 19:
list(var_decl) -> var_decl list(var_decl) . [ INICIO FUNCAO ]
-- On INICIO reduce production list(var_decl) -> var_decl list(var_decl) 
-- On FUNCAO reduce production list(var_decl) -> var_decl list(var_decl) 

State 20:
prog -> declaracao_algoritmo VAR list(var_decl) . list(func_decl) stm_block EOF [ # ]
-- On FUNCAO shift to state 21
-- On list(func_decl) shift to state 173
-- On func_decl shift to state 179
-- On INICIO reduce production list(func_decl) -> 

State 21:
func_decl -> FUNCAO . ID APAR option(fparams) FPAR func_type VAR list(var_decl) func_bloc [ INICIO FUNCAO ]
-- On ID shift to state 22

State 22:
func_decl -> FUNCAO ID . APAR option(fparams) FPAR func_type VAR list(var_decl) func_bloc [ INICIO FUNCAO ]
-- On APAR shift to state 23

State 23:
func_decl -> FUNCAO ID APAR . option(fparams) FPAR func_type VAR list(var_decl) func_bloc [ INICIO FUNCAO ]
-- On ID shift to state 24
-- On separated_nonempty_list(VIRGULA,fparam) shift to state 27
-- On option(fparams) shift to state 28
-- On fparams shift to state 169
-- On fparam shift to state 170
-- On FPAR reduce production option(fparams) -> 

State 24:
fparam -> ID . DECLARA tp_primitivo [ VIRGULA FPAR ]
-- On DECLARA shift to state 25

State 25:
fparam -> ID DECLARA . tp_primitivo [ VIRGULA FPAR ]
-- On VOID shift to state 12
-- On REAL shift to state 13
-- On LOGICO shift to state 14
-- On INTEIRO shift to state 15
-- On CARACTER shift to state 16
-- On tp_primitivo shift to state 26

State 26:
fparam -> ID DECLARA tp_primitivo . [ VIRGULA FPAR ]
-- On VIRGULA reduce production fparam -> ID DECLARA tp_primitivo 
-- On FPAR reduce production fparam -> ID DECLARA tp_primitivo 

State 27:
fparams -> separated_nonempty_list(VIRGULA,fparam) . [ FPAR ]
-- On FPAR reduce production fparams -> separated_nonempty_list(VIRGULA,fparam) 

State 28:
func_decl -> FUNCAO ID APAR option(fparams) . FPAR func_type VAR list(var_decl) func_bloc [ INICIO FUNCAO ]
-- On FPAR shift to state 29

State 29:
func_decl -> FUNCAO ID APAR option(fparams) FPAR . func_type VAR list(var_decl) func_bloc [ INICIO FUNCAO ]
-- On DECLARA shift to state 30
-- On func_type shift to state 32

State 30:
func_type -> DECLARA . tp_primitivo [ VAR ]
-- On VOID shift to state 12
-- On REAL shift to state 13
-- On LOGICO shift to state 14
-- On INTEIRO shift to state 15
-- On CARACTER shift to state 16
-- On tp_primitivo shift to state 31

State 31:
func_type -> DECLARA tp_primitivo . [ VAR ]
-- On VAR reduce production func_type -> DECLARA tp_primitivo 

State 32:
func_decl -> FUNCAO ID APAR option(fparams) FPAR func_type . VAR list(var_decl) func_bloc [ INICIO FUNCAO ]
-- On VAR shift to state 33

State 33:
func_decl -> FUNCAO ID APAR option(fparams) FPAR func_type VAR . list(var_decl) func_bloc [ INICIO FUNCAO ]
-- On ID shift to state 6
-- On var_decl shift to state 9
-- On separated_nonempty_list(VIRGULA,ID) shift to state 10
-- On list(var_decl) shift to state 34
-- On INICIO reduce production list(var_decl) -> 

State 34:
func_decl -> FUNCAO ID APAR option(fparams) FPAR func_type VAR list(var_decl) . func_bloc [ INICIO FUNCAO ]
-- On INICIO shift to state 35
-- On func_bloc shift to state 168

State 35:
func_bloc -> INICIO . list(stm_list) FIMFUNCAO [ INICIO FUNCAO ]
-- On VERDADEIRO shift to state 36
-- On SE shift to state 37
-- On RETORNE shift to state 93
-- On PARA shift to state 97
-- On LITSTRING shift to state 38
-- On LITCHAR shift to state 39
-- On LEIA shift to state 107
-- On INT shift to state 40
-- On ID shift to state 41
-- On FLOAT shift to state 43
-- On FALSO shift to state 44
-- On ESCREVAL shift to state 112
-- On ESCREVA shift to state 117
-- On ESCOLHA shift to state 122
-- On ENQUANTO shift to state 126
-- On APAR shift to state 45
-- On stm_se shift to state 129
-- On stm_ret shift to state 130
-- On stm_para shift to state 131
-- On stm_list shift to state 132
-- On stm_leia shift to state 133
-- On stm_fcall shift to state 134
-- On stm_escreval shift to state 135
-- On stm_escreva shift to state 136
-- On stm_escolha shift to state 137
-- On stm_enquanto shift to state 138
-- On stm_attr shift to state 139
-- On lvalue shift to state 46
-- On logico_value shift to state 48
-- On list(stm_list) shift to state 166
-- On fcall shift to state 141
-- On expr shift to state 143
-- On FIMFUNCAO reduce production list(stm_list) -> 

State 36:
logico_value -> VERDADEIRO . [ XOU VIRGULA SUB SOMA PTV POTENCIA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL FACA ENTAO E DIVISAO DIFERENTE DE ATRIB ATE ]
-- On XOU reduce production logico_value -> VERDADEIRO 
-- On VIRGULA reduce production logico_value -> VERDADEIRO 
-- On SUB reduce production logico_value -> VERDADEIRO 
-- On SOMA reduce production logico_value -> VERDADEIRO 
-- On PTV reduce production logico_value -> VERDADEIRO 
-- On POTENCIA reduce production logico_value -> VERDADEIRO 
-- On PASSO reduce production logico_value -> VERDADEIRO 
-- On OU reduce production logico_value -> VERDADEIRO 
-- On MULT reduce production logico_value -> VERDADEIRO 
-- On MOD reduce production logico_value -> VERDADEIRO 
-- On MENORIGUAL reduce production logico_value -> VERDADEIRO 
-- On MENOR reduce production logico_value -> VERDADEIRO 
-- On MAIORIGUAL reduce production logico_value -> VERDADEIRO 
-- On MAIOR reduce production logico_value -> VERDADEIRO 
-- On IGUAL reduce production logico_value -> VERDADEIRO 
-- On FPAR reduce production logico_value -> VERDADEIRO 
-- On FCOL reduce production logico_value -> VERDADEIRO 
-- On FACA reduce production logico_value -> VERDADEIRO 
-- On ENTAO reduce production logico_value -> VERDADEIRO 
-- On E reduce production logico_value -> VERDADEIRO 
-- On DIVISAO reduce production logico_value -> VERDADEIRO 
-- On DIFERENTE reduce production logico_value -> VERDADEIRO 
-- On DE reduce production logico_value -> VERDADEIRO 
-- On ATRIB reduce production logico_value -> VERDADEIRO 
-- On ATE reduce production logico_value -> VERDADEIRO 

State 37:
stm_se -> SE . expr ENTAO list(stm_list) option(stm_senao) FIMSE [ VERDADEIRO SENAO SE RETORNE PARA OUTROCASO LITSTRING LITCHAR LEIA INT ID FLOAT FIMSE FIMPARA FIMFUNCAO FIMESCOLHA FIMENQUANTO FIMALGORITMO FALSO ESCREVAL ESCREVA ESCOLHA ENQUANTO CASO APAR ]
-- On VERDADEIRO shift to state 36
-- On LITSTRING shift to state 38
-- On LITCHAR shift to state 39
-- On INT shift to state 40
-- On ID shift to state 41
-- On FLOAT shift to state 43
-- On FALSO shift to state 44
-- On APAR shift to state 45
-- On lvalue shift to state 46
-- On logico_value shift to state 48
-- On fcall shift to state 49
-- On expr shift to state 91

State 38:
expr -> LITSTRING . [ XOU VIRGULA SUB SOMA PTV POTENCIA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL FACA ENTAO E DIVISAO DIFERENTE DE ATRIB ATE ]
-- On XOU reduce production expr -> LITSTRING 
-- On VIRGULA reduce production expr -> LITSTRING 
-- On SUB reduce production expr -> LITSTRING 
-- On SOMA reduce production expr -> LITSTRING 
-- On PTV reduce production expr -> LITSTRING 
-- On POTENCIA reduce production expr -> LITSTRING 
-- On PASSO reduce production expr -> LITSTRING 
-- On OU reduce production expr -> LITSTRING 
-- On MULT reduce production expr -> LITSTRING 
-- On MOD reduce production expr -> LITSTRING 
-- On MENORIGUAL reduce production expr -> LITSTRING 
-- On MENOR reduce production expr -> LITSTRING 
-- On MAIORIGUAL reduce production expr -> LITSTRING 
-- On MAIOR reduce production expr -> LITSTRING 
-- On IGUAL reduce production expr -> LITSTRING 
-- On FPAR reduce production expr -> LITSTRING 
-- On FCOL reduce production expr -> LITSTRING 
-- On FACA reduce production expr -> LITSTRING 
-- On ENTAO reduce production expr -> LITSTRING 
-- On E reduce production expr -> LITSTRING 
-- On DIVISAO reduce production expr -> LITSTRING 
-- On DIFERENTE reduce production expr -> LITSTRING 
-- On DE reduce production expr -> LITSTRING 
-- On ATRIB reduce production expr -> LITSTRING 
-- On ATE reduce production expr -> LITSTRING 

State 39:
expr -> LITCHAR . [ XOU VIRGULA SUB SOMA PTV POTENCIA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL FACA ENTAO E DIVISAO DIFERENTE DE ATRIB ATE ]
-- On XOU reduce production expr -> LITCHAR 
-- On VIRGULA reduce production expr -> LITCHAR 
-- On SUB reduce production expr -> LITCHAR 
-- On SOMA reduce production expr -> LITCHAR 
-- On PTV reduce production expr -> LITCHAR 
-- On POTENCIA reduce production expr -> LITCHAR 
-- On PASSO reduce production expr -> LITCHAR 
-- On OU reduce production expr -> LITCHAR 
-- On MULT reduce production expr -> LITCHAR 
-- On MOD reduce production expr -> LITCHAR 
-- On MENORIGUAL reduce production expr -> LITCHAR 
-- On MENOR reduce production expr -> LITCHAR 
-- On MAIORIGUAL reduce production expr -> LITCHAR 
-- On MAIOR reduce production expr -> LITCHAR 
-- On IGUAL reduce production expr -> LITCHAR 
-- On FPAR reduce production expr -> LITCHAR 
-- On FCOL reduce production expr -> LITCHAR 
-- On FACA reduce production expr -> LITCHAR 
-- On ENTAO reduce production expr -> LITCHAR 
-- On E reduce production expr -> LITCHAR 
-- On DIVISAO reduce production expr -> LITCHAR 
-- On DIFERENTE reduce production expr -> LITCHAR 
-- On DE reduce production expr -> LITCHAR 
-- On ATRIB reduce production expr -> LITCHAR 
-- On ATE reduce production expr -> LITCHAR 

State 40:
expr -> INT . [ XOU VIRGULA SUB SOMA PTV POTENCIA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL FACA ENTAO E DIVISAO DIFERENTE DE ATRIB ATE ]
-- On XOU reduce production expr -> INT 
-- On VIRGULA reduce production expr -> INT 
-- On SUB reduce production expr -> INT 
-- On SOMA reduce production expr -> INT 
-- On PTV reduce production expr -> INT 
-- On POTENCIA reduce production expr -> INT 
-- On PASSO reduce production expr -> INT 
-- On OU reduce production expr -> INT 
-- On MULT reduce production expr -> INT 
-- On MOD reduce production expr -> INT 
-- On MENORIGUAL reduce production expr -> INT 
-- On MENOR reduce production expr -> INT 
-- On MAIORIGUAL reduce production expr -> INT 
-- On MAIOR reduce production expr -> INT 
-- On IGUAL reduce production expr -> INT 
-- On FPAR reduce production expr -> INT 
-- On FCOL reduce production expr -> INT 
-- On FACA reduce production expr -> INT 
-- On ENTAO reduce production expr -> INT 
-- On E reduce production expr -> INT 
-- On DIVISAO reduce production expr -> INT 
-- On DIFERENTE reduce production expr -> INT 
-- On DE reduce production expr -> INT 
-- On ATRIB reduce production expr -> INT 
-- On ATE reduce production expr -> INT 

State 41:
fcall -> ID . APAR option(fargs) FPAR [ XOU VIRGULA SUB SOMA PTV POTENCIA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL FACA ENTAO E DIVISAO DIFERENTE DE ATRIB ATE ]
lvalue -> ID . [ XOU VIRGULA SUB SOMA PTV POTENCIA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL FACA ENTAO E DIVISAO DIFERENTE DE ATRIB ATE ACOL ]
-- On APAR shift to state 42
-- On XOU reduce production lvalue -> ID 
-- On VIRGULA reduce production lvalue -> ID 
-- On SUB reduce production lvalue -> ID 
-- On SOMA reduce production lvalue -> ID 
-- On PTV reduce production lvalue -> ID 
-- On POTENCIA reduce production lvalue -> ID 
-- On PASSO reduce production lvalue -> ID 
-- On OU reduce production lvalue -> ID 
-- On MULT reduce production lvalue -> ID 
-- On MOD reduce production lvalue -> ID 
-- On MENORIGUAL reduce production lvalue -> ID 
-- On MENOR reduce production lvalue -> ID 
-- On MAIORIGUAL reduce production lvalue -> ID 
-- On MAIOR reduce production lvalue -> ID 
-- On IGUAL reduce production lvalue -> ID 
-- On FPAR reduce production lvalue -> ID 
-- On FCOL reduce production lvalue -> ID 
-- On FACA reduce production lvalue -> ID 
-- On ENTAO reduce production lvalue -> ID 
-- On E reduce production lvalue -> ID 
-- On DIVISAO reduce production lvalue -> ID 
-- On DIFERENTE reduce production lvalue -> ID 
-- On DE reduce production lvalue -> ID 
-- On ATRIB reduce production lvalue -> ID 
-- On ATE reduce production lvalue -> ID 
-- On ACOL reduce production lvalue -> ID 

State 42:
fcall -> ID APAR . option(fargs) FPAR [ XOU VIRGULA SUB SOMA PTV POTENCIA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL FACA ENTAO E DIVISAO DIFERENTE DE ATRIB ATE ]
-- On VERDADEIRO shift to state 36
-- On LITSTRING shift to state 38
-- On LITCHAR shift to state 39
-- On INT shift to state 40
-- On ID shift to state 41
-- On FLOAT shift to state 43
-- On FALSO shift to state 44
-- On APAR shift to state 45
-- On separated_nonempty_list(VIRGULA,expr) shift to state 84
-- On option(fargs) shift to state 85
-- On lvalue shift to state 46
-- On logico_value shift to state 48
-- On fcall shift to state 49
-- On fargs shift to state 87
-- On expr shift to state 88
-- On FPAR reduce production option(fargs) -> 

State 43:
expr -> FLOAT . [ XOU VIRGULA SUB SOMA PTV POTENCIA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL FACA ENTAO E DIVISAO DIFERENTE DE ATRIB ATE ]
-- On XOU reduce production expr -> FLOAT 
-- On VIRGULA reduce production expr -> FLOAT 
-- On SUB reduce production expr -> FLOAT 
-- On SOMA reduce production expr -> FLOAT 
-- On PTV reduce production expr -> FLOAT 
-- On POTENCIA reduce production expr -> FLOAT 
-- On PASSO reduce production expr -> FLOAT 
-- On OU reduce production expr -> FLOAT 
-- On MULT reduce production expr -> FLOAT 
-- On MOD reduce production expr -> FLOAT 
-- On MENORIGUAL reduce production expr -> FLOAT 
-- On MENOR reduce production expr -> FLOAT 
-- On MAIORIGUAL reduce production expr -> FLOAT 
-- On MAIOR reduce production expr -> FLOAT 
-- On IGUAL reduce production expr -> FLOAT 
-- On FPAR reduce production expr -> FLOAT 
-- On FCOL reduce production expr -> FLOAT 
-- On FACA reduce production expr -> FLOAT 
-- On ENTAO reduce production expr -> FLOAT 
-- On E reduce production expr -> FLOAT 
-- On DIVISAO reduce production expr -> FLOAT 
-- On DIFERENTE reduce production expr -> FLOAT 
-- On DE reduce production expr -> FLOAT 
-- On ATRIB reduce production expr -> FLOAT 
-- On ATE reduce production expr -> FLOAT 

State 44:
logico_value -> FALSO . [ XOU VIRGULA SUB SOMA PTV POTENCIA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL FACA ENTAO E DIVISAO DIFERENTE DE ATRIB ATE ]
-- On XOU reduce production logico_value -> FALSO 
-- On VIRGULA reduce production logico_value -> FALSO 
-- On SUB reduce production logico_value -> FALSO 
-- On SOMA reduce production logico_value -> FALSO 
-- On PTV reduce production logico_value -> FALSO 
-- On POTENCIA reduce production logico_value -> FALSO 
-- On PASSO reduce production logico_value -> FALSO 
-- On OU reduce production logico_value -> FALSO 
-- On MULT reduce production logico_value -> FALSO 
-- On MOD reduce production logico_value -> FALSO 
-- On MENORIGUAL reduce production logico_value -> FALSO 
-- On MENOR reduce production logico_value -> FALSO 
-- On MAIORIGUAL reduce production logico_value -> FALSO 
-- On MAIOR reduce production logico_value -> FALSO 
-- On IGUAL reduce production logico_value -> FALSO 
-- On FPAR reduce production logico_value -> FALSO 
-- On FCOL reduce production logico_value -> FALSO 
-- On FACA reduce production logico_value -> FALSO 
-- On ENTAO reduce production logico_value -> FALSO 
-- On E reduce production logico_value -> FALSO 
-- On DIVISAO reduce production logico_value -> FALSO 
-- On DIFERENTE reduce production logico_value -> FALSO 
-- On DE reduce production logico_value -> FALSO 
-- On ATRIB reduce production logico_value -> FALSO 
-- On ATE reduce production logico_value -> FALSO 
